--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
     crossorigin="anonymous" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
     crossorigin="anonymous">
-  <link rel="stylesheet" href="Style.css" />
-  <link rel="stylesheet" href="mobile-style.css">
+  <link rel="stylesheet" href="./Style.css" />
+  <link rel="stylesheet" href="./mobile-style.css">
 </head>
 
 <body>
@@ -102,7 +102,7 @@
         </div>
       </div>
     </section>
-    
+
 
     <!-- Section 4 -->
     <section class="section-4">
@@ -185,7 +185,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint iure autem recusandae, veniam, illo dolor soluta assumenda
                     minima quia velit officia sit exercitationem nam ipsa, repellendus aut facilis quasi voluptas!
                   </p>
-                  
+
                 </div>
               </div>
         </div>
@@ -236,7 +236,7 @@
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
-  <script src="main.js"></script>
+  <script src="./main.js"></script>
 </body>
 
-</html>
+</html> 
